--- a/app_server/views/CS.ejs
+++ b/app_server/views/CS.ejs
@@ -154,7 +154,7 @@
                     <div class="row g-3">
                         <div class="col-lg-12 col-md-12 wow zoomIn" data-wow-delay="0.1s">
                             <a class="position-relative d-block overflow-hidden" href="#">
-                                <img class="img-fluid" src="/images/CS/techfusion.JPeG" alt="Techfusion">
+                                <img class="img-fluid" src="/images/CS/techfusion.jpeg" alt="Techfusion">
                                 <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
                                     <h5 class="m-0">Tech Fusion </h5>
                                     <small class="text-primary">August 25 - August 26 2023</small>
