--- a/app_server/views/PES.ejs
+++ b/app_server/views/PES.ejs
@@ -117,7 +117,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="/images/PES/PES_logo.png" alt="GRSS Logo" style="object-fit:contain">
+                        <img class="img-fluid position-absolute w-100 h-100" src="/images/PES/PES_logo.PNG" alt="PES Logo" style="object-fit:contain">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
