--- a/app_server/views/CIS.ejs
+++ b/app_server/views/CIS.ejs
@@ -188,7 +188,7 @@
                         </div>
                         <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.3s">
                             <a class="position-relative d-block overflow-hidden" href="#">
-                                <img class="img-fluid" src="/images/CIS/Blindcodingposter.png" alt="Blind Coding poster">
+                                <img class="img-fluid" src="/images/CIS/BC.png" alt="Blind Coding poster">
                                 <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3" style="margin: 1px;">
                                     <h5 class="m-0">Blind Coding</h5>
                                     <small class="text-primary">8 December 2023</small>
