--- a/app_server/views/SB.ejs
+++ b/app_server/views/SB.ejs
@@ -70,7 +70,7 @@
                         <div class="p-4">
                             <i class="fa fa-3x 		fas fa-landmark text-primary mb-4"></i>
                             <h5 class="mb-3">Date of Establishment</h5>
-                            <h2><p>data not given</p></h2>
+                            <h2><p>27 February 2012</p></h2>
                         </div>
                     </div>
                 </div>
